Fix color contrast

--- a/src/main.css
+++ b/src/main.css
@@ -17,40 +17,43 @@ html {
   --blue: rgb(10, 132, 255);
   --purple: rgb(175, 82, 222);
   --red: rgb(255, 59, 48);
-  --gradient: 72deg, rgba(206,15,61,1) 5%, rgba(28,155,235,1) 52%, rgba(43,60,150,1) 85%, rgba(107,22,167,1) 100%;
+  --gradient: 72deg, rgba(206, 15, 61, 1) 5%, rgba(28, 155, 235, 1) 52%,
+    rgba(43, 60, 150, 1) 85%, rgba(107, 22, 167, 1) 100%;
   --gray: rgb(0, 0, 0);
   --primary: rgba(255, 255, 255, 1);
-  --secondary: rgba(255, 255, 255, .7);
-  --hint: rgba(255, 255, 255, .5);
-  --separator: rgba(255, 255, 255, .12);
-  --shade: rgba(255, 255, 255, .03);
+  --secondary: rgba(255, 255, 255, 0.7);
+  --hint: rgba(255, 255, 255, 0.5);
+  --separator: rgba(255, 255, 255, 0.12);
+  --shade: rgba(255, 255, 255, 0.03);
   text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   background-color: var(--gray);
 }
 
-html[data-theme="light"] {
+html[data-theme='light'] {
   --blue: rgb(0, 122, 255);
   --purple: rgb(191, 90, 242);
   --red: rgb(255, 69, 58);
-  --gradient: 72deg, rgba(49,240,194,1) 5%, rgba(227,100,20,1) 52%, rgba(212,195,105,1) 85%, rgba(148,233,88,1) 100%;
+  --gradient: 72deg, rgba(49, 240, 194, 1) 5%, rgba(227, 100, 20, 1) 52%,
+    rgba(212, 195, 105, 1) 85%, rgba(148, 233, 88, 1) 100%;
   --gray: rgb(255, 255, 255);
-  --primary: rgba(0, 0, 0, .87);
-  --secondary: rgba(0, 0, 0, .65);
-  --hint: rgba(0, 0, 0, .38);
-  --separator: rgba(0, 0, 0, .12);
-  --shade: rgba(0, 0, 0, .03);
+  --primary: rgba(0, 0, 0, 0.87);
+  --secondary: rgba(0, 0, 0, 0.65);
+  --hint: rgba(0, 0, 0, 0.38);
+  --separator: rgba(0, 0, 0, 0.12);
+  --shade: rgba(0, 0, 0, 0.03);
 }
 
-@supports (font-variation-settings:normal) {
+@supports (font-variation-settings: normal) {
   html {
-    -webkit-font-feature-settings: "case" 1;
-    font-feature-settings: "case" 1;
+    -webkit-font-feature-settings: 'case' 1;
+    font-feature-settings: 'case' 1;
   }
 }
 
 body {
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji";
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Helvetica Neue',
+    Helvetica, Arial, sans-serif, 'Apple Color Emoji';
   font-weight: 400;
   font-size: 17px;
   line-height: 25px;
@@ -90,11 +93,11 @@ footer p {
   line-height: 16.0004px;
   letter-spacing: -0.12px;
   margin: 0;
-  color: var(--hint);
+  color: var(--secondarty);
 }
 
 footer a {
-  color: var(--secondary);
+  color: var(--primary);
 }
 
 a,
@@ -105,7 +108,8 @@ button {
 
 a:hover,
 a:active,
-button {
+button:hover,
+button:active {
   opacity: 0.7;
 }
 
@@ -144,12 +148,12 @@ button {
   }
 }
 
-.stagger-wrapper{
+.stagger-wrapper {
   display: inline-block;
   overflow: hidden;
 }
 
-.stagger{
+.stagger {
   display: inline-block;
   animation: slideUp 400ms ease-out;
   animation-fill-mode: backwards;
@@ -158,7 +162,7 @@ button {
 h1 {
   font-size: 19px;
   font-weight: 600;
-  letter-spacing: .009em;
+  letter-spacing: 0.009em;
   line-height: 1.21053;
   margin: 0;
   animation: fadeInUp 500ms ease-out;
@@ -168,7 +172,7 @@ h1 {
 h2 {
   font-size: 48px;
   font-weight: 700;
-  letter-spacing: .004em;
+  letter-spacing: 0.004em;
   line-height: 1.05;
   margin: 60px 0 0 0;
 }
@@ -177,7 +181,7 @@ h3 {
   font-size: 21px;
   line-height: 1.19048;
   font-weight: 600;
-  letter-spacing: .011em;
+  letter-spacing: 0.011em;
   margin: 30px 0 0 0;
   animation: fadeInUp 300ms ease-out 800ms;
   animation-fill-mode: backwards;
@@ -211,7 +215,7 @@ h3 a {
     mix-blend-mode: multiply;
   }
 
-  html[data-theme="light"] .gradient {
+  html[data-theme='light'] .gradient {
     filter: invert(1);
   }
 }
@@ -239,6 +243,6 @@ h3 a {
   h3 {
     font-size: 48px;
     line-height: 1.08349;
-    letter-spacing: -.003em;
+    letter-spacing: -0.003em;
   }
 }
